--- a/y/package.json
+++ b/y/package.json
@@ -16,11 +16,17 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "react": "18.2.0",
+    "react-d3-cloud": "^1.0.6",
     "react-native": "0.73.5",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-tag-cloud": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
