--- a/y/package.json
+++ b/y/package.json
@@ -26,6 +26,8 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.2.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-tag-cloud": "^1.3.3"
   },
   "devDependencies": {
